k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecochain
  labels:
    app: ecochain-exchange
